--- a/css/main.css
+++ b/css/main.css
@@ -170,7 +170,10 @@ aside img {
    Author's custom styles
    ========================================================================== */
 
-
+#logo {
+    width: 120px;
+    height: 120px;
+}
 
 article {
   text-align: center;
@@ -418,7 +421,7 @@ footer a:hover {
    }
 
    .screenshot1 {
-     transform: translate(100px, 0px);
+     transform: translate(40px, 0px);
    }
 
    .screenshot2 {
@@ -427,7 +430,7 @@ footer a:hover {
    }
 
    .screenshot3 {
-     transform: translate(-100px, 0px);
+     transform: translate(-40px, 0px);
    }
 
     .wrapper {
