--- a/css/main.css
+++ b/css/main.css
@@ -52,112 +52,6 @@ textarea {
 }
 
 
-/* ===== Initializr Styles ==================================================
-   Author: Jonathan Verrecchia - verekia.com/initializr/responsive-template
-   ========================================================================== */
-
-body {
-    font: 16px/26px Helvetica Neue, Helvetica, Arial;
-}
-
-.wrapper {
-    /*width: 90%;*/
-    /*margin: 0 5%;*/
-}
-
-/* ===================
-    ALL: Orange Theme
-   =================== */
-
-.header-container {
-    border-bottom: 20px solid #e44d26;
-}
-
-.footer-container,
-.main aside {
-    /*border-top: 20px solid #e44d26;*/
-}
-
-.header-container,
-.footer-container,
-.main aside {
-    /*background: #f16529;*/
-}
-
-.title {
-    /*color: white;*/
-}
-
-/* ==============
-    MOBILE: Menu
-   ============== */
-
-nav ul {
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
-}
-
-nav a {
-    display: block;
-    margin-bottom: 10px;
-    padding: 15px 0;
-
-    text-align: center;
-    text-decoration: none;
-    font-weight: bold;
-
-    color: white;
-    background: #e44d26;
-}
-
-nav a:hover,
-nav a:visited {
-    color: white;
-}
-
-nav a:hover {
-    text-decoration: underline;
-}
-
-/* ==============
-    MOBILE: Main
-   ============== */
-
-.main {
-    padding: 30px 0;
-}
-
-.main article h1 {
-  font-size: 50px;
-  line-height: 1em;
-  font-weight: 100;
-  margin-top: 20px;
-  /*margin-bottom: 20px;*/
-}
-
-.main aside {
-    color: white;
-      display: flex;
-      align-content: center;
-      align-items: center;
-      flex-flow: row wrap;
-      justify-content: center;
-    /*padding: 0px 5% 10px;*/
-}
-
-aside img {
-  padding-bottom: 20px;
-   margin: auto;
-   max-height: 400px;
-}
-
-.footer-container footer {
-    /*color: #222;*/
-    padding: 10px 0;
-    background-color: #49A8F3;
-}
-
 /* ===============
     ALL: IE Fixes
    =============== */
@@ -170,9 +64,28 @@ aside img {
    Author's custom styles
    ========================================================================== */
 
+.speech-bubble {
+	position: relative;
+	background: #ffffff;
+    border-radius: .4em;
+    padding: 8px 8px 8px 8px;
+    font-size: 13px;
+    margin-left: 8px;
+}
+
+div.featurediscription p {
+    line-height: 28px;
+}
+
+.shortreference h2 {
+    text-align: center;
+}
+
 #logo {
     width: 120px;
     height: 120px;
+    margin-bottom: 40px;
+    margin-top: 40px;
 }
 
 article {
@@ -181,203 +94,185 @@ article {
   margin-right: 20px;
 }
 
-aside {
-      /*overflow: hidden;*/
+  #header {
+      background-color: #ffffff1f;
+      position: fixed;
+    width: 100%;
+    z-index: 1000;
+  }
+
+  .menu {
+      margin-left: 80px;
+      padding-top: 8px;
+      padding-bottom: 8px;
+  }
+
+  .menu a {
+      font-size: 16px;
+      color: #494231;
+      margin-right: 40px;
+      text-decoration: none
+  }
+
+  .menu a:hover {
+    text-decoration: none;
+    font-weight: 500;
 }
 
-.screenshot {
-  /*overflow: hidden;*/
-  /*max-width: 896px;
-    max-height: 581px;
-     margin-right: -400px;*/
-}
+  body {
+      color: #222222;
+      font-family: 'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;
+  }
 
-p.tagline {
-  font-size: 18px;
-  font-weight: 300;
-    line-height: 1.5;
-  color: #666;
-  max-width: 300px;
-  margin-left: auto;
-  margin-right: auto;
-}
+  .hero {
+    background: linear-gradient(#FCF2DF, #E9EBFA, rgb(255, 255, 255));
+  }
 
-p.features {
-  font-size: 14px;
-  font-weight: 300;
-    line-height: 1.5;
-  color: #666;
-  max-width: 300px;
-  margin-left: auto;
-  margin-right: auto;
+  .hero h1 {
+      font-size: 40px;
+      margin-top: 0;
+      margin-bottom: 40px;
+      line-height: 1.5;
+      margin-right: 80px;
+      font-weight: 500;
+  }
+
+  p.herotext {
+    margin-bottom: 40px;
+    font-weight: 400;
+    font-size: 17px;
+    line-height: 28px;
+  }
+
+  .screenshot {
+    -webkit-box-shadow: inset 0 4px 7px 1px #fff, inset 0 -5px 20px rgba(173,186,204,.25), 0 2px 6px rgba(0,21,64,.14), 0 10px 20px rgba(0,21,64,.05);
+    box-shadow: inset 0 4px 7px 1px #fff, inset 0 -5px 20px rgba(173,186,204,.25), 0 2px 6px rgba(0,21,64,.14), 0 10px 20px rgba(0,21,64,.05);
+  }
+
+  .shadow {
+    -webkit-box-shadow: inset 0 4px 7px 1px #fff, 0 2px 6px rgba(0,21,64,.14), 0 10px 20px rgba(0,21,64,.05);
+    box-shadow: inset 0 4px 7px 1px #fff, 0 2px 6px rgba(0,21,64,.14), 0 10px 20px rgba(0,21,64,.05);
+  }
+
+.referencequote {
+    font-style: italic;
+    color: #999;
 }
 
 .appstore {
-  margin-top: 20px;
+    width: 200px;
 }
-
-.button {
-  background-color: #50D1C2;
-  background-image: linear-gradient(#49A8F3, #50D1C2);
-  border: none;
-  color: white;
-  border-radius: 2px;
-
-  padding-top: 8px;
-    padding-right: 24px;
-    padding-left: 24px;
-    padding-bottom: 8px;
-
-    margin-top: 20px;
-/*margin-bottom: 20px;*/
-
-    font-size: 16px;
-    font-weight: 300;
-}
-
-.button-copy {
-  margin-top: 0px;
-  color: #444;
-  font-size: 10px;
-  font-weight: 300;
-}
-
-.button:hover {
-  /*font-weight: 400;*/
-  box-shadow: 1px 3px 3px 0px rgba(34, 34, 34, 0.2);
-}
-
-.links {
-  margin-top: 20px;
-  margin-top: 10px;
-}
-
-.presskit {
-  color: #49A8F3;
-  font-size: 12px;
-  font-weight: 300;
-}
-
-footer a {
-  display: block;
-  color: white;
-  font-size: 16px;
-  font-weight: 300;
-  text-align: center;
-  margin-left: 20px;
-  margin-right: 20px;
-}
-
-footer a:hover {
-  /*font-weight: 300;*/
-}
-
 
 
 /* ==========================================================================
    Media Queries
    ========================================================================== */
 
-@media only screen and (min-width: 480px) {
+@media only screen and (min-width: 300px) {
 
-/* ====================
-    INTERMEDIATE: Menu
-   ==================== */
-
-    nav a {
-        float: left;
-        width: 27%;
-        margin: 0 1.7%;
-        padding: 25px 2%;
-        margin-bottom: 0;
+    .content, .download, .shortreference  {
+        display: inline-grid;
+        align-items: center;
+        grid-template-columns: auto;
+        justify-items: center;
+        /* width: 100%;
+        height: 100%; */
     }
 
-    nav li:first-child a {
-        margin-left: 0;
+    .download {
+        width: 100%;
     }
 
-    nav li:last-child a {
-        margin-right: 0;
+    .left, .right {
+        margin-left: 16px;
+        margin-right: 16px;
     }
 
-    .main aside {
-      display: flex;
-      align-content: center;
-      align-items: center;
-      flex-flow: row wrap;
-      justify-content: center;
-      /*padding: 20px 5% 10px;*/
-      /*justify-content: flex-end;*/
-
-        /*float: right;*/
-        /*width: 65%;*/
+    .fullpage {
+        height: auto;
     }
 
-    aside img {
-      padding-bottom: 20px;
-       margin: auto;
-       max-height: 400px;
-
+    .screenshot {
+        max-height: 400px;
+        border-radius: 4px;
+        margin-top: 40px;
     }
 
-/* ========================
-    INTERMEDIATE: IE Fixes
-   ======================== */
-
-    nav ul li {
-        display: inline;
+    .referencecards {
+        margin: 16px;
+        align-items: initial;
     }
 
-    .oldie nav a {
-        margin: 0 0.7%;
+    .qrcode {
+        display: none;
+    }
+
+    .tip {
+        display: none;
+    }
+
+    .speech-bubble:after {
+        display: none;
+    }
+
+    .shortreference {
+        margin-top: 40px;
+    }
+
+    .referencecontent {
+        margin-left: 16px;
+        margin-right: 16px;
+    }
+
+    .hero h1 {
+        font-size: 1.5em;
     }
 }
 
 @media only screen and (min-width: 768px) {
 
-/* ====================
-    WIDE: CSS3 Effects
-   ==================== */
-
-    /*.header-container,
-    .main aside {
-        -webkit-box-shadow: 0 5px 10px #aaa;
-           -moz-box-shadow: 0 5px 10px #aaa;
-                box-shadow: 0 5px 10px #aaa;
-    }*/
-
-/* ============
-    WIDE: Menu
-   ============ */
-
-    /*.title {
-        float: left;
-    }*/
-
-    nav {
-        float: right;
-        width: 38%;
-    }
-
 /* ============
     WIDE: Main
    ============ */
 
-    .main article {
-        float: left;
-        width: 30%;
+    .content {
+        display: inline-grid;
+        align-items: center;
+        grid-template-columns: 60% 40%;
+        height: 100%;
+        width: 100%;
+        /* width: 100%;
+        height: 100%; */
     }
 
-    .main aside {
-      display: flex;
-      align-content: flex-start;
-      align-items: center;
-      /*flex-flow: row wrap;*/
-      justify-content: space-between;
-      /*justify-content: flex-end;*/
+    .wrapper {
+        /*width: 1026px; /* 1140px - 10% for margins */
+        margin: 0 auto;
+    }
 
-        /*float: right;*/
-        /*width: 65%;*/
+    .screenshot {
+        max-height: 500px;
+        border-radius: 38px;
+    }
+
+   .fullpage {
+    /* Height and width fallback for older browsers. */
+      min-height: 800px;
+      width: 100%;
+  
+      /* Set the height to match that of the viewport. */
+      height: 100vh;
+  
+      /* Set the width to match that of the viewport. */
+      width: 100vw;
+  
+      /* Remove any browser-default margins. */
+      margin: 0;
+    }
+
+   .referencecard {
+    margin-left: 24px;
+    margin-right: 24px;
     }
 
     aside img {
@@ -385,6 +280,64 @@ footer a:hover {
        /*margin: auto;*/
        max-height: 560px;
 
+    }
+
+    .download {
+        display: inline-grid;
+        align-items: center;
+        grid-template-columns: auto auto auto;
+    }
+    
+    .tip {
+        margin-left: 8px;
+        display: initial;
+    }
+    
+    .qrcode {
+        margin-left: 40px;
+        display: initial;
+    }
+
+    .referencecards {
+        margin: 80px;
+        display: inline-grid;
+        align-items: center;
+        grid-template-columns: auto auto auto;
+    }
+    
+    .shortreference {
+        margin-top: 80px;
+        margin-bottom: 80px;
+    }
+    
+    /* .left {
+        margin-left: 40px;
+        margin-right: 40px;
+    
+    }
+    
+    .right {
+        margin-right: 0;
+        margin-left: 0;
+    } */
+
+    .speech-bubble:after {
+        display: initial;
+        content: '';
+        position: absolute;
+        left: 0;
+        top: 50%;
+        width: 0;
+        height: 0;
+        border: 8px solid transparent;
+        border-right-color: #ffffff;
+        border-left: 0;
+        margin-top: -8px;
+        margin-left: -8px;
+    }
+
+    .screenshot {
+        margin-top: 0;
     }
 }
 
@@ -395,15 +348,6 @@ footer a:hover {
     max-height: 480px;
   }
 
-  .screenshot3 {
-        transform: translate(0px, -400px);
-        /*z-index: 1000;*/
-  }
-
-  .screenshot2 {
-    z-index: 1000;
-  }
-
 }
 
 @media only screen and (min-width: 1140px) {
@@ -412,31 +356,22 @@ footer a:hover {
     Maximal Width
    =============== */
 
-   .main aside {
-     justify-content: flex-start;
-   }
-
-   aside img {
-     max-height: 480px;
-   }
-
-   .screenshot1 {
-     transform: translate(40px, 0px);
-   }
-
-   .screenshot2 {
-         transform: translate(0px, 100px);
-         z-index: 1000;
-   }
-
-   .screenshot3 {
-     transform: translate(-40px, 0px);
-   }
-
-    .wrapper {
-        /*width: 1026px; /* 1140px - 10% for margins */*/
-        margin: 0 auto;
+    .screenshot {
+        max-height: 667px;
+        border-radius: 38px;
     }
+
+    .left {
+        margin-left: 80px;
+        margin-right: 80px;
+
+    }
+
+    .right {
+        margin-right: 80px;
+        margin-left: 80px;
+    }
+
 }
 
 /* ==========================================================================
