--- a/css/main.css
+++ b/css/main.css
@@ -81,6 +81,10 @@ div.featurediscription p {
     text-align: center;
 }
 
+.shortreference {
+    width: 100%;
+}
+
 #logo {
     width: 120px;
     height: 120px;
@@ -131,7 +135,6 @@ article {
   .hero h1 {
       font-size: 40px;
       margin-top: 0;
-      margin-bottom: 40px;
       line-height: 1.5;
       margin-right: 80px;
       font-weight: 500;
@@ -170,13 +173,17 @@ article {
 
 @media only screen and (min-width: 300px) {
 
-    .content, .download, .shortreference  {
+    .content, .download, .shortreference, .left  {
         display: inline-grid;
         align-items: center;
         grid-template-columns: auto;
         justify-items: center;
         /* width: 100%;
         height: 100%; */
+    }
+
+    .hero h1 {
+        margin-bottom: 0;
     }
 
     .download {
@@ -339,6 +346,15 @@ article {
     .screenshot {
         margin-top: 0;
     }
+
+    .hero h1 {
+        margin-bottom: 32px;
+        font-size: 2.5em;
+    }
+
+    .left {
+        justify-items: left;
+    }
 }
 
 
@@ -356,6 +372,17 @@ article {
     Maximal Width
    =============== */
 
+   .content, .referencecontent {
+        max-width: 1140px;
+   }
+
+   .fullpage, .shortreference {
+    display: inline-grid;
+        align-items: center;
+        grid-template-columns: auto;
+        justify-items: center;
+   }
+
     .screenshot {
         max-height: 667px;
         border-radius: 38px;
@@ -371,6 +398,8 @@ article {
         margin-right: 80px;
         margin-left: 80px;
     }
+
+
 
 }
 
